# rust-sped

./: Cargo.toml  README.md
esocial/: Cargo.toml
esocial/src/: main.rs
esocial/src/constants/: ambiente.rs  documento.rs  eventos.rs  mod.rs  origem.rs  tipos.rs  value.rs
esocial/src/esocial/: esocial.rs  mod.rs
esocial/src/eventos/: eventos.rs  mod.rs  root.rs  s1000.rs
esocial/src/identificadores/: ide.rs  mod.rs
esocial/src/lotes_eventos/: consulta.rs  dados_repcao_lote.rs  envio_lotes_eventos.rs  mod.rs  ocorrencia.rs  retorno_envio_lote_eventos.rs  status.rs
esocial/src/toxml/: mod.rs  toxml.rs
esocial/src/utils/: cpf.rs  exec.rs  gerador_id.rs  mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: test_macro1.rs
qualicadastral/: Cargo.toml  saida.txt
qualicadastral/src/: criar_arquivo.rs  dto.rs  lib.rs  main.rs
utils/src/: lib.rs
xml/src/: lib.rs
